*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.7 ===
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Added german translations (contributed by Johannes Guenther).
* Added pitch control for the sample.
* Updated build scripts and dependencies.

=== 1.0.4 ===
* Updated build scripts and dependencies.

=== 1.0.3 ===
* Initial release.
