@@ -160,6 +160,7 @@
 						status=":fs[ssel]"
 						width.min="320"
 						height.min="160"
+						load.preview="true"
 						clipboard.pitch="pi[ssel]"
 						clipboard.head_cut="hc[ssel]"
 						clipboard.tail_cut="tc[ssel]"
